--- a/index.html
+++ b/index.html
@@ -245,6 +245,7 @@
             handleMapClick: false,
             selectionCircle: null,
             birdButtonClick: false,
+            localNotable: false,
             fetchProgress: 0,  // Number of completed fetches
             totalSpecies: 0,   // Total number of species to fetch
             uniqueBirds: new Map(),
@@ -290,6 +291,7 @@
           this.selectedSpeciesCode = item.speciesCode; // Store the species code
           this.searchQuery = item.comName; // Set the search input to the common name
           this.showOptions = false; // Hide the options list
+          this.localNotable = false
           this.allObservations = []; // Clear previous observations
 
           if (this.selectionCircle) {
@@ -315,6 +317,7 @@
                 this.latitude = position.coords.latitude;
                 this.longitude = position.coords.longitude;
                 this.apiURL = `https://api.ebird.org/v2/data/obs/geo/recent/notable?lat=${this.latitude}&lng=${this.longitude}&back=10&dist=50`;
+                this.localNotable = true
                 this.updateMapMarkersLocal()
                 }, error => {
                     console.error('Error getting location:', error);
@@ -324,6 +327,7 @@
             }
         },
         selectNearMeAll() {
+          this.localNotable = false
           if (navigator.geolocation) {
                 navigator.geolocation.getCurrentPosition(position => {
                 this.latitude = position.coords.latitude;
@@ -352,9 +356,35 @@
             }
         },
         onBirdNameClick(bird) {
-          this.apiURL = `https://api.ebird.org/v2/data/nearest/geo/recent/${bird.speciesCode}?lat=${this.latitude}&lng=${this.longitude}&back=10&dist=50`
-          this.birdButtonClick = true
-          this.updateMapMarkersLocal()
+            if (this.localNotable){
+                this.birdButtonClick = true
+                this.markerGroup.clearLayers();
+                const filteredObservations = this.allObservations.filter(observation => observation.speciesCode === bird.speciesCode);
+                filteredObservations.forEach(observation => {
+
+                // Check if bird species is already in the list
+                if (!this.uniqueBirds.has(observation.speciesCode)) {
+                    this.uniqueBirds.set(observation.speciesCode, {
+                        comName: observation.comName,
+                        speciesCode: observation.speciesCode
+                    });
+                }
+                // Create and add a marker for each observation
+                const popupContent = `Species: ${observation.comName}<br>Date: ${observation.obsDt}<br>Location: ${observation.locName}</br>Bird Info: <a target='_blank' href='https://ebird.org/species/${observation.speciesCode}'>More Info</a>`;
+                const marker = L.marker([observation.lat, observation.lng]).bindPopup(popupContent);
+                this.markerGroup.addLayer(marker);
+                });
+                if (!this.birdButtonClick) {
+                this.birdNames = [];
+                this.birdNames = Array.from(this.uniqueBirds.values()).sort((a, b) => a.comName.localeCompare(b.comName));
+                }
+                this.birdButtonClick = false;
+                this.coverScreen = false; // Hide loading overlay
+            } else {
+                this.apiURL = `https://api.ebird.org/v2/data/nearest/geo/recent/${bird.speciesCode}?lat=${this.latitude}&lng=${this.longitude}&back=10&dist=50`
+                this.birdButtonClick = true
+                this.updateMapMarkersLocal()
+            }
         },
         enableMapClick() {
             // Always set handleMapClick to true when the button is clicked
@@ -379,6 +409,7 @@
             this.longitude = e.latlng.lng
             this.apiURL = `https://api.ebird.org/v2/data/obs/geo/recent?lat=${this.latitude}&lng=${this.longitude}&back=10&dist=50`;
             this.birdButtonClick = false;
+            this.localNotable = false
             this.updateMapMarkersLocal()
             // Reset handleMapClick to false to prevent additional selections until the button is clicked again
             this.handleMapClick = false;
@@ -460,7 +491,7 @@
                 color: color,
                 opacity: 0,
                 fillColor: color,
-                fillOpacity: 0.2,
+                fillOpacity: 0.4,
                 radius: 3
               }).bindPopup(popupContent);
 
@@ -526,7 +557,7 @@
                 color: color,
                 opacity: 0,
                 fillColor: color,
-                fillOpacity: 0.2,
+                fillOpacity: 0.4,
                 radius: 3
               }).bindPopup(popupContent);
 
@@ -570,7 +601,8 @@
                 return response.json();
             })
             .then(data => {
-                data.forEach(observation => {
+                this.allObservations = data
+                this.allObservations.forEach(observation => {
 
                     // Check if bird species is already in the list
                     if (!this.uniqueBirds.has(observation.speciesCode)) {
@@ -585,8 +617,8 @@
                     this.markerGroup.addLayer(marker);
                 });
                 if (!this.birdButtonClick) {
-                  this.birdNames = [];
-                  this.birdNames = Array.from(this.uniqueBirds.values()).sort((a, b) => a.comName.localeCompare(b.comName));
+                this.birdNames = [];
+                this.birdNames = Array.from(this.uniqueBirds.values()).sort((a, b) => a.comName.localeCompare(b.comName));
                 }
                 this.birdButtonClick = false;
                 this.coverScreen = false; // Hide loading overlay
@@ -668,11 +700,21 @@
             //const speciesTest = [{"speciesCode": "comloo","comName": "Common Loon"},{"speciesCode": "commer","comName": "Common Merganser"},{"speciesCode": "commur","comName": "Common Murre"},{"speciesCode": "comnig","comName": "Common Nighthawk"},{"speciesCode": "compoo","comName": "Common Poorwill"},{"speciesCode": "comrav","comName": "Common Raven"},{"speciesCode": "comred","comName": "Common Redpoll"},{"speciesCode": "blksco1","comName": "Common Scoter"}];
             this.fetchProgress = 0;  // Reset progress on function start
             this.totalSpecies = this.speciesArray.length;  // Set total number of species
+            if (navigator.geolocation) {
+                navigator.geolocation.getCurrentPosition(position => {
+                this.latitude = position.coords.latitude;
+                this.longitude = position.coords.longitude;
+                }, error => {
+                    console.error('Error getting location:', error);
+                });
+            } else {
+                console.log("Geolocation is not supported by this browser.");
+            }
             const migrationLatObj = {};
             const currentDate = new Date();
             const fetchPromises = this.speciesArray.map(species => {
                 this.coverScreenMigrators = true;
-                this.apiURL = `https://api.ebird.org/v2/data/obs/US-OR/recent/${species.speciesCode}?back=30&r=US-ID,US-CA,US-NV,US-WA,US-OR`;
+                this.apiURL = `https://api.ebird.org/v2/data/nearest/geo/recent/${species.speciesCode}?lat=${this.latitude}&lng=${this.longitude}&back=30`;
                 return fetch(this.apiURL, {
                     headers: {
                         'X-eBirdApiToken': this.apiKey
@@ -686,7 +728,7 @@
                 })
                 .then(data => {
                     this.fetchProgress++;
-                    if (data.length > 100 && data.length < 3000) {
+                    if (data.length > 200) {
                         const oldData = new Set();
                         const newData = new Set();
                         data.forEach(observation => {
@@ -709,49 +751,7 @@
                               speciesCode: species.speciesCode  // Include speciesCode here
                           };
                         }
-                    } else {
-                        this.apiURL = `https://api.ebird.org/v2/data/nearest/geo/recent/${species.speciesCode}?lat=44.3&lng=-121.2&back=30`;
-                        return fetch(this.apiURL, {
-                            headers: {
-                                'X-eBirdApiToken': this.apiKey
-                            }
-                        })
-                        .then(response => {
-                            if (!response.ok) {
-                                throw new Error('Network response was not ok');
-                            }
-                            return response.json();
-                        })
-                        .then(data => {
-                            if (data.length > 100 && data.length < 3000) {
-                                const oldData = new Set();
-                                const newData = new Set();
-                                data.forEach(observation => {
-                                    const obsDate = new Date(observation.obsDt);
-                                    const timeDiff = currentDate - obsDate;
-                                    const daysAgo = timeDiff / (1000 * 3600 * 24);
-                                    if (daysAgo > 20) {
-                                        oldData.add(observation.lat);
-                                    } else {
-                                        newData.add(observation.lat);
-                                    }
-                                });
-                                if (oldData.size && newData.size) {
-                                    const maxOldLat = Math.max(...oldData);
-                                    const maxNewLat = Math.max(...newData);
-                                    const latDiff = maxNewLat - maxOldLat;
-                                    migrationLatObj[species.speciesCode] = {
-                                    comName: species.comName,
-                                    latDiff: latDiff,
-                                    speciesCode: species.speciesCode  // Include speciesCode here
-                                };
-                                }
-                            }
-                        })
-                        .catch(error => {
-                            console.error('Error fetching data:', error);
-                        }); 
-                    }
+                    } 
                 })
                 .catch(error => {
                     console.error('Error fetching data:', error);
